XAUTHORITY comment for synergys on lxdm

--- a/etc/synergy.conf
+++ b/etc/synergy.conf
@@ -2,7 +2,8 @@
 ## create `/etc/sv/synergy[cs]/conf`:
 # SERVER_ADDR=192.168.1.10 # only required for synergyc
 # export DISPLAY=:0.0
-# export XAUTHORITY=/run/lightdm/root/:0 
+# export XAUTHORITY=/run/lightdm/root/:0   # lightdm
+# export XAUTHORITY=/run/lxdm/lxdm-:0.auth # lxdm (xfce)
 
 
 section: screens
