ranger: Use mpv instead of mplayer

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -4,16 +4,16 @@ ext jpg, flag f = python_sxiv.py "$@"
 ext png, flag f = python_sxiv.py "$@"
 ext gif, flag f = python_sxiv.py "$@"
 ext jpeg, flag f = python_sxiv.py "$@"
-ext flv, flag f = mplayer "$@"
-ext mpg, flag f = mplayer "$@"
-ext avi, flag f = mplayer "$@"
-ext mkv, flag f = mplayer "$@"
-ext mp4, flag f = mplayer "$@"
-ext wmv, flag f = mplayer "$@"
-ext ogm, flag f = mplayer "$@"
+ext flv, flag f = mpv "$@"
+ext mpg, flag f = mpv "$@"
+ext avi, flag f = mpv "$@"
+ext mkv, flag f = mpv "$@"
+ext mp4, flag f = mpv "$@"
+ext wmv, flag f = mpv "$@"
+ext ogm, flag f = mpv "$@"
 #mime ^video|audio, has mplayer, X, flag f = mplayer -- "$@"
-ext mp3 = mplayer "$@"
-ext wav = mplayer "$@"
+ext mp3 = mpv "$@"
+ext wav = mpv "$@"
 ext pdf, flag f = mupdf "$@"
-ext ts, flag f = mplayer "$@"
+ext ts, flag f = mpv "$@"
 
