--- a/.skhdrc
+++ b/.skhdrc
@@ -63,8 +63,8 @@ ctrl + cmd - p : yabai -m display --focus prev || yabai -m display --focus last
 ctrl + cmd - n : yabai -m display --focus next || yabai -m display --focus first
 
 # send window to monitor and follow focus
-ctrl + alt + cmd - p  : yabai -m window --display prev
-ctrl + alt + cmd - n  : yabai -m window --display next
+ctrl + alt + cmd - p  : yabai -m window --display prev || yabai -m window --display last
+ctrl + alt + cmd - n  : yabai -m window --display next || yabai -m window --display first
 
 # send window to monitor and follow focus
 # ctrl + cmd - c  : yabai -m window --display next; yabai -m display --focus next
@@ -87,10 +87,10 @@ ctrl + alt + cmd + shift - k : yabai -m window --resize bottom:0:-20
 ctrl + alt + cmd + shift - l : yabai -m window --resize left:20:0
 
 # set insertion point in focused container
-ctrl + cmd - w : yabai -m window --insert north
-ctrl + cmd - a : yabai -m window --insert west
-ctrl + cmd - s : yabai -m window --insert south
-ctrl + cmd - d : yabai -m window --insert east
+# ctrl + cmd - w : yabai -m window --insert north
+# ctrl + cmd - a : yabai -m window --insert west
+# ctrl + cmd - s : yabai -m window --insert south
+# ctrl + cmd - d : yabai -m window --insert east
 
 # toggle window zoom
 # alt - d : yabai -m window --toggle zoom-parent
@@ -98,7 +98,7 @@ ctrl + cmd - f : yabai -m window --toggle zoom-fullscreen
 ctrl + alt + cmd - f : yabai -m window --toggle native-fullscreen
 
 # toggle window split type
-# alt - e : yabai -m window --toggle split
+ctrl + cmd - e : yabai -m window --toggle split
 
 # float / unfloat window and center on screen
 ctrl + alt + cmd - r : yabai -m window --toggle float;\
@@ -119,17 +119,26 @@ ctrl + alt + cmd - y : yabai -m space --mirror x-axis
 ctrl + alt + cmd - x : yabai -m space --mirror y-axis
 
 # stacks
-ctrl + cmd - x : yabai -m window --insert stack
-ctrl + cmd - z : yabai -m window --focus stack.prev
-ctrl + cmd - c : yabai -m window --focus stack.next
+ctrl + cmd - z : yabai -m window --insert stack
+ctrl + cmd - x : yabai -m window --focus stack.next || yabai -m window --focus stack.first
 
 # start applications
 ctrl + cmd - return : "${HOME}"/scripts/open_iterm2.sh
 
-# switch browser tabs
+# trigger other hotkeys
+## copy and paste
+ctrl + cmd - c : skhd -k "cmd - c"
+ctrl + cmd - v : skhd -k "cmd - v"
+## switch browser tabs
 ctrl + cmd - g : skhd -k "ctrl + shift - tab"
 ctrl + cmd - b : skhd -k "ctrl - tab"
-
-# lock screen
-# TODO: Find keycode for Pause.
-# ctrl + cmd - Pause : skhd -k "ctrl + cmd - q"
+## new tab
+ctrl + cmd - t : skhd -k "cmd - t"
+## close window
+ctrl + cmd - w : skhd -k "cmd - w"
+## quit application
+ctrl + cmd - q : skhd -k "cmd - q"
+## toggle focus dock
+f18 : skhd -k "ctrl - f3"
+## toggle mission control
+f16 : skhd -k "ctrl - up"
