--- a/.yabairc
+++ b/.yabairc
@@ -16,8 +16,8 @@
 
 # global settings
 yabai -m config mouse_follows_focus          on
-yabai -m config focus_follows_mouse          autoraise
-yabai -m config window_origin_display        default
+yabai -m config focus_follows_mouse          off
+yabai -m config window_origin_display        focused
 yabai -m config window_placement             second_child
 yabai -m config window_topmost               off
 yabai -m config window_shadow                on
@@ -49,6 +49,7 @@ yabai -m config window_gap                   6
 yabai -m rule --add app="^Discord$" grid=1:1:0:0:1:1 manage=off
 yabai -m rule --add app="^Steam$" manage=off
 yabai -m rule --add app="^System Preferences$" manage=off
+yabai -m rule --add app="^Calculator$" manage=off
 
 # signals
 yabai -m signal --add event=window_destroyed active=yes action="yabai -m query --windows --window &> /dev/null || yabai -m window --focus mouse &> /dev/null || yabai -m window --focus \$(yabai -m query --windows --space | jq .[0].id) &> /dev/null"
