--- a/.yabairc
+++ b/.yabairc
@@ -46,7 +46,7 @@ yabai -m config right_padding                6
 yabai -m config window_gap                   6
 
 # window rules
-yabai -m rule --add app="^Discord$" grid=1:1:0:0:1:1 manage=off
+# yabai -m rule --add app="^Discord$" grid=1:1:0:0:1:1 manage=off
 yabai -m rule --add app="^Steam$" manage=off
 yabai -m rule --add app="^System Preferences$" manage=off
 yabai -m rule --add app="^Calculator$" manage=off
