--- a/.yabairc
+++ b/.yabairc
@@ -16,7 +16,7 @@
 
 # global settings
 yabai -m config mouse_follows_focus          on
-yabai -m config focus_follows_mouse          off
+yabai -m config focus_follows_mouse          autofocus
 yabai -m config window_origin_display        focused
 yabai -m config window_placement             second_child
 yabai -m config window_topmost               off
